# Dynamic_Encrypt

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  PROJECT_REPORT.md  README.md  TECHNICAL_BREAKDOWN.md  run_app.bat
src/: main.cpp
src/core/: CryptoDriver.h  Key.h  Storage.h  VaultEntry.h  VaultManager.cpp  VaultManager.h  ZeroizingBuffer.h
src/gui/: KeyDialog.cpp  KeyDialog.h  MainWindow.cpp  MainWindow.h
src/plugins/aes_plugin/: AESDriverImpl.cpp  AESDriverImpl.h  plugin.json
tests/: core_tests.cpp
